<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/firebase_logo"
        android:src="@drawable/firebase"
        app:layout_constraintBottom_toTopOf="@+id/cvLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingTop="8dp"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="email@gmail.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingTop="8dp"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiePass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Temporal*0" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLoginGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginHorizontal="12dp"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/login_with_google"
                    android:src="@drawable/ic_google_logo"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLoginFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginHorizontal="12dp"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/login_with_facebook"
                    android:src="@drawable/ic_fb"
                    app:tint="@color/white" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLoginGitHub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginHorizontal="12dp"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/login_with_github"
                    android:src="@drawable/ic_github"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLoginAnonymously"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/login_with_phone"
                    android:src="@drawable/ic_anonymously"
                    app:tint="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLoginMicrosoft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginHorizontal="12dp"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/login_with_microsoft"
                    android:src="@drawable/ic_microsoft"
                    app:tint="@color/white" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLoginTwitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginHorizontal="12dp"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/login_with_twitter"
                    android:src="@drawable/ic_twitter"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLoginYahoo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginHorizontal="12dp"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/login_with_yahoo"
                    android:src="@drawable/ic_yahoo"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLoginPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/login_with_phone"
                    android:src="@drawable/ic_phone"
                    app:tint="@color/white" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>